# YouRiBash-Project

./: .gitmodules  README.md  get_kinematics.py  launch_moveit.py  received_data.csv  robot_notes.txt  robot_tester_gui.py  sim_control.py  test_world.sdf
src/mtc_listener/: package.xml  setup.cfg  setup.py
src/mtc_listener/launch/: mtc_demo.launch.py
src/mtc_listener/mtc_listener/: mtc_listener.py
src/mtc_tutorial/: CMakeLists.txt  package.xml
src/mtc_tutorial/launch/: launch.py  mtc_basic.launch.py  mtc_elev.launch.py  mtc_obs.launch.py  mtc_obs_elev.launch.py  pick_place_demo.launch.py
src/mtc_tutorial/src/: mtc_basic.cpp  mtc_elev.cpp  mtc_obs.cpp  mtc_obs_elev.cpp
src/robot-assets/: setup.py
src/robot_assets/: package.xml  setup.cfg  setup.py
src/robot_configs/franka_panda_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_configs/franka_panda_config/config/: franka_panda.ros2_control.xacro  franka_panda.srdf  franka_panda.urdf  franka_panda.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  panda.ros2_control.xacro  panda.srdf  panda.urdf.xacro  ros2_controllers.yaml
src/robot_configs/franka_panda_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robot_configs/kinova_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_configs/kinova_config/config/: initial_positions.yaml  joint_limits.yaml  kinova.ros2_control.xacro  kinova.srdf  kinova.urdf  kinova.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
src/robot_configs/kinova_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  (+3 more)
src/robot_configs/kuka_iiwa_config/: .setup_assistant  CMakeLists.txt  package.xml
src/youribash_gz/: package.xml  setup.cfg  setup.py
src/youribash_gz/launch/: sim.launch.py  simlaunch.py
(+22 files in other folders)
